ephy-completion-model: normalize NULL strings to "" in should_add_bookmark_to_model

Otherwise we can get false positives in the regexp, since the previous
attempt at normalization would not properly take NULL strings into
account.

https://bugzilla.gnome.org/show_bug.cgi?id=673301